crates/lang/tests/ui/contract/fail/constructor-payable.stderr
error: encountered conflicting ink! attribute argument
 --> tests/ui/contract/fail/constructor-payable.rs:9:28
  |
9 |         #[ink(constructor, payable)]
  |                            ^^^^^^^

error: constructors are implicitly payable
 --> tests/ui/contract/fail/constructor-payable.rs:9:28
  |
9 |         #[ink(constructor, payable)]
  |                            ^^^^^^^
